refactor: change model and dto
