# onchain-handler/internal/dto/token_transfer_history.go
@@ -1,12 +1,12 @@
 package dto
 
 type TokenTransferHistoryDTO struct {
-	ID                       uint64 `json:"id"`
-	TokenDistributionAddress string `json:"token_distribution_address"`
-	RecipientAddress         string `json:"recipient_address"`
-	TransactionHash          string `json:"transaction_hash"`
-	TokenAmount              string `json:"token_amount"`
-	Status                   int16  `json:"status"`
-	TxType                   string `json:"tx_type"`
-	ErrorMessage             string `json:"error_message"`
+	ID              uint64 `json:"id"`
+	TransactionHash string `json:"transaction_hash"`
+	FromAddress     string `json:"from_address"`
+	ToAddress       string `json:"to_address"`
+	TokenAmount     string `json:"token_amount"`
+	Symbol          string `json:"symbol"`
+	Status          bool   `json:"status"`
+	ErrorMessage    string `json:"error_message"`
 }
